[gd_scene load_steps=3 format=3 uid="uid://bpnt7sbv577ni"]

[ext_resource type="Script" path="res://source/ui/menu_level/main_menu.gd" id="1_ix0gc"]
[ext_resource type="Theme" uid="uid://dugvn7mo5qn3x" path="res://resources/themes/default.tres" id="1_qgepp"]

[node name="Main Menu" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -58.0
offset_right = 211.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qgepp")
script = ExtResource("1_ix0gc")

[node name="Main Menu Buttons" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu Buttons"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Main Menu Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Server"

[node name="HBoxContainer" type="HBoxContainer" parent="Main Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="Main Menu Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Connect to Server"

[node name="ConnectServerIP" type="LineEdit" parent="Main Menu Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 14)
layout_mode = 2
placeholder_text = "192.168.xxx.xxx"

[node name="CreditButton" type="Button" parent="Main Menu Buttons/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/HBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="text_changed" from="Main Menu Buttons/VBoxContainer/HBoxContainer/ConnectServerIP" to="." method="_on_connect_server_ip_text_changed"]
[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
